--- a/package.json
+++ b/package.json
@@ -9,20 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "8.8.0",
-    "next": "11.1.0",
+    "firebase": "^8.6.8",
+    "js-cookie": "^2.2.1",
+    "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
     "@types/react": "^17.0.20",
-    "autoprefixer": "^10.3.2",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
-    "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.7",
+    "autoprefixer": "^10.2.6",
+    "eslint": "7.29.0",
+    "eslint-config-next": "11.0.1",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4",
     "typescript": "^4.4.2"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
